--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".activity.Orientation"
+            android:exported="false" />
+        <activity
             android:name=".activity.RateUs"
             android:exported="false" />
         <activity
